TITAN2-8507 - Remove outer scroll bar from table widget, set box-sizing to border box to prevent cutoff

--- a/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
+++ b/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
@@ -153,8 +153,13 @@ div[gridster-item] {
 
   .widget {
 
+    lo-resource-table {
+      overflow: hidden;
+    }
+
     .scrollable-table-container {
       height: 100%;
+      -webkit-box-sizing: border-box;
     }
 
     .source-switcher-widget {
